// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-data-type should delete a data type 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-data-type should handle non-existent data type 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The data type could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
